Implement maestro signal related features. (#94)